objects/QI_Case_Copy_Config__c.object
<CustomObject>
    <label>QI Case Copy Config</label>
    <nameField>
        <label>QI Case Copy Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QI Case Copy Config</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Case_Status__c</fullName>
        <label>Case Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quality_Case_Type__c</fullName>
        <label>Quality Case Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mfg Procedures</fullName>
                </value>
                <value>
                    <fullName>Bill of Material</fullName>
                </value>
                <value>
                    <fullName>Camera</fullName>
                </value>
                <value>
                    <fullName>Chip Quality</fullName>
                </value>
                <value>
                    <fullName>Mfg Test</fullName>
                </value>
                <value>
                    <fullName>Mfg Tooling</fullName>
                </value>
                <value>
                    <fullName>Mis/Other</fullName>
                </value>
                <value>
                    <fullName>Optics</fullName>
                </value>
                <value>
                    <fullName>Out of Box Failure</fullName>
                </value>
                <value>
                    <fullName>PC/Controller</fullName>
                </value>
                <value>
                    <fullName>Plumbing – Pumps/Tubing</fullName>
                </value>
                <value>
                    <fullName>Robot</fullName>
                </value>
                <value>
                    <fullName>Wiring/Cabling</fullName>
                </value>
                <value>
                    <fullName>Misc. Hardware</fullName>
                </value>
                <value>
                    <fullName>PCB</fullName>
                </value>
                <value>
                    <fullName>Product Specs</fullName>
                </value>
                <value>
                    <fullName>Missing/Wrong Component</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
                <value>
                    <fullName>Caliper Operating Process</fullName>
                </value>
                <value>
                    <fullName>Product Enhancements</fullName>
                </value>
                <value>
                    <fullName>Vendor/Supplier Issue</fullName>
                </value>
                <value>
                    <fullName>Onsite Service/Support</fullName>
                </value>
                <value>
                    <fullName>Packaging/Shipping</fullName>
                </value>
                <value>
                    <fullName>Software/Firmware</fullName>
                </value>
                <value>
                    <fullName>Product Safety</fullName>
                </value>
                <value>
                    <fullName>Product User Documentation</fullName>
                </value>
                <value>
                    <fullName>Training/Workmanship</fullName>
                </value>
                <value>
                    <fullName>Warranty</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resolution_Code_1__c</fullName>
        <label>Resolution Code 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>100% - No field replacements</fullName>
                </value>
                <value>
                    <fullName>50% - Only Minor field replacements</fullName>
                </value>
                <value>
                    <fullName>0% - Major field replacements</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resolution_Code_2__c</fullName>
        <label>Resolution Code 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>100% - No components missing</fullName>
                </value>
                <value>
                    <fullName>50% - 1 or 2 components missing</fullName>
                </value>
                <value>
                    <fullName>0% - 2+ components missing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resolution_Code_3__c</fullName>
        <label>Resolution Code 3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>100% - Professional AND Protected</fullName>
                </value>
                <value>
                    <fullName>50% - Professional OR Protected</fullName>
                </value>
                <value>
                    <fullName>0% - Neither</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Case_Type__c</fullName>
        <label>Service Case Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Application</fullName>
                </value>
                <value>
                    <fullName>Chip and Reagent Replacement</fullName>
                </value>
                <value>
                    <fullName>Consumable</fullName>
                </value>
                <value>
                    <fullName>Field Service</fullName>
                </value>
                <value>
                    <fullName>Hardware</fullName>
                </value>
                <value>
                    <fullName>Question</fullName>
                </value>
                <value>
                    <fullName>Software</fullName>
                </value>
                <value>
                    <fullName>Training Request</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quality_Case_Status__c</fullName>
        <label>Quality Case Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quality_Case_Sub_Type__c</fullName>
        <label>Quality Case Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Quality_Case_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Case_Sub_Type__c</fullName>
        <label>Service Case Sub-Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Courtesy Call</fullName>
                </value>
                <value>
                    <fullName>Installation</fullName>
                </value>
                <value>
                    <fullName>Move</fullName>
                </value>
                <value>
                    <fullName>Preventative Maintenance</fullName>
                </value>
                <value>
                    <fullName>Service Call</fullName>
                </value>
                <value>
                    <fullName>System Validation</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Internal - Sales Assist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>